<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Studoc_Clone</string>
    <string name="home_text">Home</string>
    <string name="create_account_heading">Create Account</string>
    <string name="create_account_description">Create an account to follow modules and build Studylists. Tell us where you study to be recommended top-rated materials from your university or school.</string>
    <string name="continue_text">Continue</string>
    <string name="search_text">Search</string>
    <string name="my_favourites">My Favourites</string>
    <string name="chats_text">Chats</string>
    <string name="tap_to_learn">Tap to learn mo...</string>
    <string name="saved_docs">Your saved documents</string>
    <string name="study_lists">Studylists</string>
    <string name="study_list">Studylist</string>
    <string name="recent_docs">Recent Documents</string>
    <string name="login_to_continue">Login or Register to continue where you left off</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="empty_message_title">It is a bit empty here</string>
    <string name="empty_message_description">You are currently browsing as a guest. Login or Register to experience Studocu at it\'s fullest.</string>
    <string name="sign_in">Sign in</string>
    <string name="terms">Terms of use</string>
    <string name="privacy">Privacy policy</string>
    <string name="contact">Contact us</string>
    <string name="feedback">Give feedback</string>
    <string name="delete">Delete account</string>
    <string name="logout">Logout</string>
    <string name="version">Version: 5.3.0.5234</string>
    <string name="user_name">Abdul Wahab</string>
    <string name="college_name">National University of Computer and Emerging Sciences, 2021</string>
    <string name="uploads">Uploads</string>
    <string name="modules">Modules</string>
    <string name="books">Books</string>
    <string name="studylists_count">0</string>
    <string name="uploads_count">0</string>
    <string name="modules_count">0</string>
    <string name="books_count">0</string>
    <string name="Studdoc">Studdoc</string>


    <string name="client_id">301759107383-6ae1uldbo5ksdjmerdaf471bhi99isce.apps.googleusercontent.com</string>
    <string name="see_all">See all</string>
    <string name="document_name">Software Engineering - Lecture Notes</string>
    <string name="course_name">Software Engineering</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">4.5 ★</string>
    <string name="course_code">SE-101</string>"
    <string name="module">Module</string>
    <string name="recommended">Recommended</string>
    <string name="popular_books">Popular Books</string>
    <string name="book_name">Human Resource Management</string>
    <string name="author_name">Gary Dessler</string>
    <string name="book">Book</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="college_text">In National University of Computer and Emerging Sciences</string>"
    <string name="studylist_name">CPS</string>
    <string name="studylist_author">by Maryam Asif</string>
    <string name="recommended_studylists">Recommended Studylists</string>"
    <string name="search_hint">Search for any study material...</string>
    <string name="university_school">University / School</string>"
    <string name="documents">Documents</string>"
    <string name="lecture_notes">Lecture Notes</string>
    <string name="year">2022/2023</string>
    <string name="school_name">Stanford University</string>
    <string name="no_messages">No unread messages</string>
    <string name="messages">Messages</string>
    <string name="explore">Explore</string>
    <string name="my_groups">My Groups</string>
    <string name="masscom">Mass Communication</string>
    <string name="message_preview">Most recent message preview</string>
    <string name="time">12:00</string>
    <string name="create_your_group">Create your group</string>
    <string name="group_info">Group Info</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="name_text">Enter an enticing topic for your group</string>
    <string name="name_note">Use a name that is easy to find and understand</string>
    <string name="description">Description (optional)</string>"
    <string name="description_text">Let others know what this chat is about</string>
    <string name="all_chats">All Chats</string>
    <string name="country_name">Pakistan</string>
    <string name="total_chats">445</string>
    <string name="find_your_group_hint">Find your group</string>
    <string name="num_of_people">35</string>
    <string name="university_name">University of Punjab</string>
</resources>