<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_favourites_background"
    android:orientation="vertical"
    android:padding="14dp"
    android:clickable="true"
    android:focusable="true">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:textColor="@color/dark_orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/course_code"
            android:textColor="@color/orange"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_studylist_tag"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:text="@string/module"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

</LinearLayout>